--- a/School.UI/Views/TeacherRegister/_TableTeacher.cshtml
+++ b/School.UI/Views/TeacherRegister/_TableTeacher.cshtml
@@ -15,8 +15,11 @@
             <th>
                 @Html.DisplayNameFor(model => model.Gender)
             </th>
+            <th style="display:block;">
+               Details
+            </th>
             <th>
-                View More
+                View Report
             </th>
         </tr>
     </thead>
@@ -38,6 +41,9 @@
             </td>
             <td>
                 <button id="btnEditTeacher" type="button" class="btnEditTeacher btn btn-primary" style="width:100px;">View More</button>
+            </td>
+            <td style="display:block;">
+                <button id="btnRoles" type="button" class="btnEdit btn btn-primary" style="width:100px;display:block;">Roles</button>
             </td>
         </tr>
         }
