--- a/School.UI/Views/StudentSubjectMarks/_TableRecordSubjectMarks.cshtml
+++ b/School.UI/Views/StudentSubjectMarks/_TableRecordSubjectMarks.cshtml
@@ -43,7 +43,7 @@
                     </div>
                     <div class="col-md-6">
                         <button id="btnSave" type="button" class="btnSave btn btn-primary">Save Marks</button>
-                        <button type="button" id="btnSeachEdit" class="btn btn-warning btnWidth btnlogColor">Edit Marks</button>
+                        <button type="button" id="btnSeachEdit" class="btn btn-warning btnWidth btnlogColor">Search Marks</button>
                     </div>
                 </div>
 
