--- a/School.UI/Views/TeacherRegister/_CreateTeacher.cshtml
+++ b/School.UI/Views/TeacherRegister/_CreateTeacher.cshtml
@@ -49,8 +49,8 @@
     <div id="register-page" class="col-xs-12" style="border-color:rgb(241, 242, 247);">
         <div class="card_t card-s">
 
-            <h4 class="col-xs-12 text-center rm-pd" style="padding:5px; color:black">  Create New Teacher</h4>
-            <hr style="padding:5px; color:black" />
+            @*<h4 class="col-xs-12 text-center rm-pd" style="padding:5px; color:black">  Create New Teacher</h4>
+            <hr style="padding:5px; color:black" />*@
 
             <div class="form-horizontal" style="padding:10px;">
 
@@ -93,9 +93,9 @@
                     <div class="col-md-4">
                         @Html.DropDownListFor(m => m.Teacher.Language, Model.LanguageDropboxItemList, new { @id = "languageId", @class = "form-control" })
                     </div>
-                    <label class="col-sm-2" for="assignTeachers">assign Teachers:</label>
+                    <label class="col-sm-2 control-label" for="assignTeachers">assign</label>
                     <div class="col-md-4">
-                        @Html.CheckBoxFor(m => m.AssignTeacher.IsAssign, new { @id = "isAssign", @class = "form-control" })
+                        @Html.TextBoxFor(m => m.Teacher.Gender, new { @id = "unknown", @class = " col-sm-12 form-control", @readonly = "readonly" })
                     </div>
                 </div>
                 <hr />
@@ -142,8 +142,6 @@
                     </div>
                 </div>
 
-                <hr />
-
                 <div class="form-group">
                     @Html.LabelFor(model => model.Teacher.Phone1, new { @class = "col-sm-2 control-label" })
                     <div class="col-md-4">
@@ -155,11 +153,11 @@
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Teacher.Photo, new { @class = "col-sm-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(model => model.Teacher.Photo, new { type = "file", @id = "uploaFile", @readonly = "readonly", @class = "uploaFile col-sm-12 fileStyle form-control" })
-                    </div>
+                @*<div class="form-group">
+                @Html.LabelFor(model => model.Teacher.Photo, new { @class = "col-sm-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(model => model.Teacher.Photo, new { type = "file", @id = "uploaFile", @readonly = "readonly", @class = "uploaFile col-sm-12 fileStyle form-control" })
+                </div>
                 </div>
 
                 <div class="form-group" style="display:none;">
@@ -167,12 +165,13 @@
                         <img id="targetImg" class="thumbnail img-responsive" />
                     </div>
                 </div>
-
+                *@
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input id="btnSave" type="submit" value="Save" class="btn btn-primary" onclick='return validateInput()' />
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
@@ -213,10 +212,11 @@
             return isvalid
         }
 
-        if (isvalid) {
-            classMessageResponse.showMessage({ message: "Sorry, but this function is still under construction", type: "warning", title: "Under construction", pageId: "" });
-        }
-        return isvalid;
+        //if (isvalid) {
+        //    classMessageResponse.showMessage({ message: "Sorry, but this function is still under construction", type: "warning", title: "Under construction", pageId: "" });
+        //}
+        //return isvalid;
+
     }
 
     function OnSuccess(response) {
