..... done for now ............

--- a/School.UI/Views/Shared/_Layout.cshtml
+++ b/School.UI/Views/Shared/_Layout.cshtml
@@ -389,7 +389,7 @@
                 <span class="logEasy24" style="color:white; min-height:30px;width:80px">mySchool</span>
             </div>
             <div id="menuHolderId" class="PartialLayoutMenu layoutLeft-body desktopMenu rm-pd">
-                @Html.Partial("_PartialLayoutMenu")
+                @*@Html.Partial("_PartialLayoutMenu")*@
             </div>
 
         </div>
@@ -404,7 +404,7 @@
             </div>
 
             <div id="popupMenuId" class="rm-pd" style="border:2px solid red;width:250px;height: calc(100vh - 60px);position:absolute;top:50px;z-index:100;display:none;">
-                @Html.Partial("_PartialLayoutMenu")
+                @*@Html.Partial("_PartialLayoutMenu")*@
             </div>
         </div>
 
