--- a/School.UI/Views/Shared/_PartialLayoutMenu.cshtml
+++ b/School.UI/Views/Shared/_PartialLayoutMenu.cshtml
@@ -154,7 +154,7 @@
 
 <aside id="menuId" class="main-sidebar">
     <section class="sidebar">
-        <ul class="sidebar-menu primary primary_ScrollBar" style="display:block;">
+        <ul class="sidebar-menu primary primary_ScrollBar" style="display:none;">
 
             <li class="treeview" id="usr0" style="display:block">
                 <a class="centerChild" href="#" style="">
