busy adding roles per user

--- a/School.UI/Views/Shared/_PartialLayoutMenu.cshtml
+++ b/School.UI/Views/Shared/_PartialLayoutMenu.cshtml
@@ -259,7 +259,7 @@
                 </a>
             </li>
             <li class="treeview rolesId" id="N3" style="display:block;width:auto;">
-                <a id="a-rolesId" href="#" onclick="">
+                <a id="a-rolesId" href="#" onclick="callController('/Roles/GetRecord')">
                     <i class="fa fa-home"></i>
                     <span id="span-SurbubId" class="menu-header-name">Roles</span>
                     <span class="pull-right-container">
