--- a/School.UI/Views/LogIn/_LoginPage.cshtml
+++ b/School.UI/Views/LogIn/_LoginPage.cshtml
@@ -26,7 +26,7 @@
     {
         @Html.AntiForgeryToken()
         <div class="form-group has-feedback" style="padding-left:10px;padding-right:10px;">
-            @Html.TextBoxFor(m => m.EmailAddress, new {@class = "form-control", @readonly = "readonly" })
+            @Html.TextBoxFor(m => m.Username, new {@class = "form-control"})
         </div>
         <div class="form-group has-feedback" style="padding-left:10px;padding-right:10px;">           
           @Html.TextBoxFor(m => m.Password, new { @class = "form-control",Type="Password" })           
@@ -51,12 +51,10 @@
 
     function OnSuccess(response) {
 
-        $('#menuId .sidebar-menu').css("display", "block");
-        $("#Home-Container #PopupBodyUserLogin #btnCloseGeneric").trigger("click");
-        //$("#Login-page #btnClose").trigger('click');
-
         $('#div-busy-Icon').hide();
-        if (response.result !== "false") {
+        if (response.result === "false") {
+            classMessageResponse.showMessage({ message: response.message, type: "error", title: response.title, pageId: "" });
+
             //controllerHelper.isLogin = true;
             //$('#layout-page .layout-div1').css("border-bottom", "5px solid orange");
             //$('#childPage').css("display", "none");
@@ -65,22 +63,20 @@
             //$('#Home-Container #basePageId').empty().show().html(response);          
         }
         else {
-            classMessageResponse.showMessage({ message: response.message, type: "error", title: response.title, pageId: "" });
-        }
 
-        (function () {
-            //debugger;
+            $('#menuId .sidebar-menu').css("display", "block");
+            $("#Home-Container #PopupBodyUserLogin #btnCloseGeneric").trigger("click");
             var partialHolder = "#basePartialHolder #partialHolder";
             var header = 'View Desktop';
             var url = '/Dashboard/GetRecord';
+             $('#basePartialHolder').css("display", "block");
             var pageObj = { function: "append", url: url, type: "Get", data: "", header: header, pageId: "", partialHolder: partialHolder };
-            $('#basePartialHolder').css("display", "block");
             classControllerHelper.callController(pageObj);
-
-            /* var partialHomeHolder = "#homePage";*/
             $('#basePartialHolder').css("display", "block");
             $('#homePage').css("display", "none");
-        })();
 
+            $('#rightHeader-logInPageId').css("display", "none");
+            $('#rightHeader-logOffPageId').css("display", "block");
+        }
     }
 </script>
