--- a/School.UI/Views/Roles/_ViewUser.cshtml
+++ b/School.UI/Views/Roles/_ViewUser.cshtml
@@ -32,7 +32,7 @@
             <div class="col-xs-12 form-horizontal">
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-4">
-                        <select id="searchId" class="form-control">
+                        <select id="searchId" class="form-control"  readonly="readonly" disabled="disabled">
                             <option value="--Select--" selected>--all--</option>
                             <option value="Grade">User</option>
                             <option value="Gender">Teacher</option>
@@ -40,7 +40,7 @@
                         </select>
                     </div>
                     <div class="col-md-offset-2 col-md-4">
-                        <input id="textOrOptionId" type="text" placeholder="Search by textOrOptionId" class="col-md-12 form-control" />
+                        <input id="textOrOptionId" type="text" placeholder="Search by textOrOptionId" class="col-md-12 form-control"  readonly="readonly"  disabled="disabled"/>
                     </div>
                 </div>
 
@@ -58,7 +58,7 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input id="btnSave" type="submit" value="Search" class="btn btn-primary" onclick='return validateInput()' />
+                        <input id="btnSave" type="submit" value="Search" class="btn btn-primary"  disabled="disabled" onclick='return validateInput()' />
                     </div>
                 </div>
 
